--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,32 @@
 asgiref==3.4.1
+attrs==21.4.0
+autopep8==1.6.0
+bcrypt==3.2.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.10
+configparser==5.2.0
+cryptography==36.0.1
+distro==1.6.0
 Django==4.0.1
-sqlparse==0.4.2
+docker==5.0.3
+dockerpty==0.4.1
+docopt==0.6.2
+idna==3.3
+jsonschema==3.2.0
+paramiko==2.9.2
+Pillow==9.0.0
 psycopg2==2.9.3
+pycodestyle==2.8.0
+pycparser==2.21
+PyNaCl==1.5.0
+pyrsistent==0.18.0
+python-dotenv==0.19.2
+PyYAML==5.4.1
+requests==2.27.1
+six==1.16.0
+sqlparse==0.4.2
+texttable==1.6.4
+toml==0.10.2
+urllib3==1.26.8
+websocket-client==0.59.0
